<resources>
    <string name="app_name">Playmotion</string>
    <string name="action_settings">Settings</string>
    <string name="user">Username</string>
    <string name="pass">Password</string>
    <string name="login">Login</string>
    <string name="signup">Sign Up</string>
    <string name="login_error">Wrong user/password</string>
    <string name="missing_information">Missing information</string>
    <string name="name">Name</string>
    <string name="birth_date">Birth Date</string>
    <string name="missing_name">Missing name</string>
    <string name="missing_pass">Missing Password</string>
    <string name="missing_birthdate">Missing Birth Date</string>
    <string name="missing_user">Missing Username</string>
    <string name="signup_error">Signup error</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search">Search by song title</string>
    <string name="label_songs">Label songs</string>
    <!-- Strings used for fragments for navigation -->

</resources>